HVAC Backup 2/objects/HSNCode_Tax__c(1).object
<CustomObject>
    <fields>
        <fullName>CGST__c</fullName>
        <formula>IF(
    ISBLANK( Total_Tax__c ) || VALUE(Total_Tax__c) = 0,
    0,
    VALUE(Total_Tax__c) / 2
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Combined_String__c</fullName>
        <formula>LOWER(Material_Group__c)  +  HSN_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSN_Code__c</fullName>
        <label>HSN Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGST__c</fullName>
        <formula>IF(
    ISBLANK( Total_Tax__c ) || VALUE(Total_Tax__c) = 0,
    0,
    VALUE(Total_Tax__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGST__c</fullName>
        <formula>IF(
    ISBLANK( Total_Tax__c ) || VALUE(Total_Tax__c) = 0,
    0,
    VALUE(Total_Tax__c) / 2
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HSNCode Tax</label>
    <nameField>
        <displayFormat>HSNT-{0000}</displayFormat>
        <label>HSN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HSNCode Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>